--- a/index.html
+++ b/index.html
@@ -20,15 +20,25 @@
 				</ul>
 			</div>
 		</nav>
-
 		<div class="information">
 			<div id="circle">
-				<div class="feature"></div>
-				<div class="feature"></div>
-				<div class="feature"></div>
-				<div class="feature"></div>
-			</div>
+				<div class="feature one">
+					<img src="images/camera.png" alt="">
+				</div>
 
+				<div class="feature two">
+					<img src="images/camera.png" alt="">
+				</div>
+
+				<div class="feature three">
+					<img src="images/camera.png" alt="">
+				</div>
+
+				<div class="feature four">
+					<img src="images/camera.png" alt="">
+				</div>
+
+			</div>
 		</div>
 	</div>
 </body>
