[Finish]一旦学習レベルを下げてやり直し。

--- a/index.html
+++ b/index.html
@@ -21,25 +21,55 @@
 			</div>
 		</nav>
 		<div class="information">
+			<img src="images/risu.png" class="risu">
 			<div id="circle">
 				<div class="feature one">
 					<img src="images/camera.png" alt="">
+					<div>
+						<h1>cammera</h1>
+						<p>カメラです</p>
+					</div>
 				</div>
 
 				<div class="feature two">
 					<img src="images/camera.png" alt="">
+					<div>
+						<h1>cammera</h1>
+						<p>カメラです</p>
+					</div>
 				</div>
 
 				<div class="feature three">
 					<img src="images/camera.png" alt="">
+					<div>
+						<h1>cammera</h1>
+						<p>カメラです</p>
+					</div>
 				</div>
 
 				<div class="feature four">
 					<img src="images/camera.png" alt="">
+					<div>
+						<h1>cammera</h1>
+						<p>カメラです</p>
+					</div>
 				</div>
-
 			</div>
 		</div>
+		<div class="controls">
+			<img src="images/tatu.png" alt="upBtn">
+			<h3>特徴</h3>
+			<img src="images/tatu.png" id="downBtn">
+		</div>
 	</div>
+
+<script>
+	var circle = document.getElemmentById("circle");
+	var circle = document.getElemmentById("upBtn");
+	var circle = document.getElemmentById("downBtn");
+
+	var rotateVlue = circle.style.transform;
+</script>
+
 </body>
 </html>
